test/message/promise_fast_reject.out
(node:*) UnhandledPromiseRejectionWarning: Unhandled promise rejection (rejection id: 1): ReferenceError: One
(node:*) UnhandledPromiseRejectionWarning: Unhandled promise rejection (rejection id: 2): ReferenceError: Two
exit event emitted
*test*message*promise_fast_reject.js:*
  throw new Error('One');
  ^

Error: One
    at *test*message*promise_fast_reject.js:*:*
    at Promise (<anonymous>)
    at Object.<anonymous> (*test*message*promise_fast_reject.js:*:*)
    at Module._compile (module.js:*:*)
    at Object.Module._extensions..js (module.js:*:*)
    at Module.load (module.js:*:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*:*)
    at Function.Module.runMain (module.js:*:*)
    at startup (bootstrap_node.js:*:*)
